Fix s3 space encoding (#31)
* Changing release date

* Changing PathCleaner args and annotation

* Fixing S3PathCleaner

* Fixing S3PathCleanerTest

* Fixing S3PathCleanerTest and PagingCleanupService

* Fixing S3PathCleanerTest and PagingCleanupService

* Fixing S3DryRunPathCleanerTest

* Fixing S3DryRunPathCleanerTest and PagingCleanupServiceTest

* Initial commit with table level bytes deleted metrics

* Updating TimedHousekeepingPath and aspect and tests

* Removed copyright from TimedHousekeepingPathAspect and added some info

* Removed copyright from TimedHousekeepingPathAspect and added some info

* Removed some unneeded config and excluding class from mycila plugin

* Using an interface for the TimedTaggable annotation to decouple from a housekeeping path

* Updating tests

* Updating tests

* Updating changelog

* Adding to changelog

* Minor formatting

* Updating test names

* Addressed PR comments

* Removing unnecessary meter search before registering

* Bytes reporter uses Taggable class

* Initial commit

* Adding doesObjectExist tests

* Removing findify

* Fixing formatting

* Adding line in Changelog